config/system/awx/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: awx-httproute
  namespace: awx
spec:
  parentRefs:
    - name: traefik
      namespace: traefik 
  hostnames:
    - "awx.example.com"          
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: awx-service   
          port: 80
